Fixing errors, not completed.
Not ready for release, but committing anyways as i was committing with wrong account before idek