@@ -34,14 +34,10 @@ repositories {
 val graalCompile by configurations.creating
 
 dependencies {
-    // Fabric
     minecraft(libs.minecraft)
     implementation(libs.fabric.loader)
-
-    // Meteor
     implementation(libs.meteor.client)
 
-    // GraalVM -- custom configuration, not processed by Loom
     graalCompile("org.graalvm.polyglot:polyglot:25.3.4.1")
     graalCompile("org.graalvm.polyglot:js:25.3.4.1")
     graalCompile("org.graalvm.polyglot:wasm:25.3.4.1")
@@ -64,13 +60,11 @@ fun toMinecraftCompat(version: String): String {
     return "~$year.$drop"
 }
 
+val graalJars = graalCompile.filter { it.extension == "jar" }
+
 tasks {
-    /*
-     * Give javac access to Graal without exposing the configuration
-     * to Loom's dependency processing.
-     */
     withType<JavaCompile>().configureEach {
-        classpath = classpath.plus(graalCompile)
+        classpath = classpath.plus(graalJars)
 
         options.compilerArgs.addAll(
             listOf(
@@ -78,6 +72,11 @@ tasks {
                 "-Xlint:unchecked"
             )
         )
+    }
+
+    named<JavaExec>("runClient") {
+        classpath(graalJars)
+        jvmArgs("--add-modules=jdk.incubator.vector")
     }
 
     processResources {
